fix: Align guest toggle (#2674)

--- a/app/style/components/guest-mode-toggle.less
+++ b/app/style/components/guest-mode-toggle.less
@@ -25,8 +25,9 @@ guest-mode-toggle {
     font-size: 16px;
     display: flex;
     justify-content: space-between;
-    height: 36px;
+    line-height: 24px;
     border-bottom: 1px solid fade(@graphite-dark, 8%);
+    padding-bottom: 12px;
   }
 
   .guest-mode-toggle-info {
